--- a/Example-Objc/Podfile
+++ b/Example-Objc/Podfile
@@ -1,5 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
+source 'https://github.com/CocoaPods/Specs.git' #官方库
+source 'https://gitee.com/foreverht/MyPrivatePods.git' #私有库
 
 
 target 'FSCalendarExample' do
@@ -7,5 +9,6 @@ target 'FSCalendarExample' do
   use_frameworks!
 
     pod 'Masonry', '1.1.0'
+    pod 'HTGKScrollViewKit','~> 0.7.0'
 
 end
